MDEV-11205 UDF_ARGS "attribute_lengths" incorrect value.

Set name_length properly in Item_idnet constructors.